fix code spacing and iframe position

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -281,7 +281,7 @@ margin-right: auto;
 
 .project-title {
   font-size: 2rem;
-  padding: 2rem 0.5rem;
+  padding: 1.5rem 0.5rem;
 }
 
 .btn {
